Fixed bug - Spacing is off between lines though

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 br {
     display: block;
-    margin-top: -10px;
+    margin-top: 0px;
 }
 
 h4 {
